--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
         
     </header>
 
+    <!-- Pop-up Test -->
+    <!-- <h2>Popup</h2>
+
+    <div class="popup" onclick="myFunction()">Click me to toggle the popup!
+      <span class="popuptext" id="myPopup">A Simple Popup!</span>
+    </div> -->
+    <!-- Pop-up Test -->
+
     <!-- JavaScript File -->
     <script src="./js/script.js"></script>
 </body>
