Header Part Finish > Start Main Part

--- a/index.html
+++ b/index.html
@@ -21,19 +21,21 @@
             <nav class="navigation">
                 <a href="#" class="navigation__link--active">Home</a>
                 <a href="#" class="navigation__link">About</a>
-                <a href="#" class="navigation__link">Services</a>
-                <div class="navigation__link--dropdown">
-                    <a href="#">Web Design</a>
-                    <a href="#">eCommerce</a>
-                    <a href="#">Branding</a>
-                    <a href="#">API</a>
+                <div class="navigation__link--dropdown">Services
+                    <ul class="navigation__link--dropdown--sublink">
+                        <li><a href="#">Web Design</a></li>
+                        <li><a href="#">eCommerce</a></li>
+                        <li><a href="#">Branding</a></li>
+                        <li><a href="#">API</a></li>
+                    </ul>
                 </div>
-                <a href="#" class="navigation__link">Tools</a>
-                <div class="navigation__link--dropdown">
-                    <a href="#">HTML5</a>
-                    <a href="#">CSS3</a>
-                    <a href="#">SASS</a>
-                    <a href="#">JQUERY</a>
+                <div class="navigation__link--dropdown">Tools
+                    <ul class="navigation__link--dropdown--sublink">
+                        <li><a href="#">HTML5</a></li>
+                        <li><a href="#">CSS3</a></li>
+                        <li><a href="#">SASS</a></li>
+                        <li><a href="#">JQUERY</a></li>
+                    </ul>
                 </div>
                 <a href="#" class="navigation__link">Work</a>
                 <a href="#" class="navigation__link">Contact</a>
@@ -49,16 +51,9 @@
             <h3 class="header__center__subtitle">See what WE can do for your brand.</h3>
             <a href="#" class="header__center__cta">View Our Work</a>
         </div>
-        
     </header>
 
-    <!-- Pop-up Test -->
-    <!-- <h2>Popup</h2>
-
-    <div class="popup" onclick="myFunction()">Click me to toggle the popup!
-      <span class="popuptext" id="myPopup">A Simple Popup!</span>
-    </div> -->
-    <!-- Pop-up Test -->
+    
 
     <!-- JavaScript File -->
     <script src="./js/script.js"></script>
