Main Container HTML Done > Continue With Container Two & Three

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 
+    <!-- Font Awesome CDN Link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- Stylesheet CSS File -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -53,6 +56,69 @@
         </div>
     </header>
 
+    <main class="main">
+        <div class="main__container">
+            <div class="main__container__wrapper">
+                <div class="main__container__wrapper--icon">
+                    <i class="fa-solid fa-eye"></i>
+                </div>
+                <h3 class="main__container__wrapper--title">Retina Ready</h3>
+                <p class="main__container__wrapper--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora suscipit iure maxime? Facere laboriosam reiciendis numquam ipsa.</p>
+                <a class="main__container__wrapper--button" href="#">Learn More</a>
+            </div>
+            <div class="main__container__wrapper">
+                <div class="main__container__wrapper--icon">
+                    <i class="fa-solid fa-power-off"></i>
+                </div>
+                <h3 class="main__container__wrapper--title">Web Starter</h3>
+                <p class="main__container__wrapper--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora suscipit iure maxime? Facere laboriosam reiciendis numquam ipsa.</p>
+                <a class="main__container__wrapper--button" href="#">Learn More</a>
+            </div>
+            <div class="main__container__wrapper">
+                <div class="main__container__wrapper--icon">
+                    <i class="fa-solid fa-laptop"></i>
+                </div>
+                <h3 class="main__container__wrapper--title">Fully Responsive</h3>
+                <p class="main__container__wrapper--text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora suscipit iure maxime? Facere laboriosam reiciendis numquam ipsa.</p>
+                <a class="main__container__wrapper--button" href="#">Learn More</a>
+            </div>
+            <div class="main__container__wrapper">
+                <a class="main__container__wrapper--icon" href="#">
+                    <i class="fa-brands fa-youtube"></i>
+                </a>
+            </div>
+        </div>
+
+        <div class="main__container__two">
+            <div class="main__container__two__header">
+                <h1 class="main__container__two__header--title">Core Features</h1>
+                <p class="main__container__two__header--text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut nemo, dolore rerum culpa at tempora quam eos?</p>
+            </div>
+            <div class="main__container__two__body">
+                <div class="main__container__two__body--img"></div>
+                <div class="main__container__two__body--description">
+                    <div class="main__container__two__body--description--block">
+                        <h3 class="description--block--title">
+                            <i class="fa-solid fa-check description--block--icon"></i><span>Retine ready</span> 
+                        </h3>
+                        <p class="description--block--text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos!</p>
+                    </div>
+                    <div class="main__container__two__body--description--block">
+                        <h3 class="description--block--title">
+                            <i class="fa-solid fa-check description--block--icon"></i><span>Fully responsive</span> 
+                        </h3>
+                        <p class="description--block--text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos!</p>
+                    </div>
+                    <div class="main__container__two__body--description--block">
+                        <h3 class="description--block--title">
+                            <i class="fa-solid fa-check description--block--icon"></i><span>Ready to use</span> 
+                        </h3>
+                        <p class="description--block--text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
     
 
     <!-- JavaScript File -->
