Main Part Two Done > Begin Main Part Three

--- a/index.html
+++ b/index.html
@@ -89,31 +89,53 @@
             </div>
         </div>
 
-        <div class="main__container__two">
-            <div class="main__container__two__header">
-                <h1 class="main__container__two__header--title">Core Features</h1>
-                <p class="main__container__two__header--text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut nemo, dolore rerum culpa at tempora quam eos?</p>
-            </div>
-            <div class="main__container__two__body">
-                <div class="main__container__two__body--img"></div>
-                <div class="main__container__two__body--description">
-                    <div class="main__container__two__body--description--block">
-                        <h3 class="description--block--title">
-                            <i class="fa-solid fa-check description--block--icon"></i><span>Retine ready</span> 
-                        </h3>
-                        <p class="description--block--text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos!</p>
+        <div class="main__two">
+            <div class="main__two__container">
+                <div class="main__two__container__left">
+                    <div class="main__two__container__left__header">
+                        <h1 class="main__two__container__left__header--title">Core Features</h1>
+                        <p class="main__two__container__left__header--text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut nemo, dolore rerum culpa at tempora quam eos?</p>
                     </div>
-                    <div class="main__container__two__body--description--block">
-                        <h3 class="description--block--title">
-                            <i class="fa-solid fa-check description--block--icon"></i><span>Fully responsive</span> 
-                        </h3>
-                        <p class="description--block--text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos!</p>
+                    <div class="main__two__container__left__body">
+                        <img src="./images/work_1.png" class="main__two__container__left__body--img" alt="Dashboard">
+                        <div class="main__two__container__left__body--description">
+                            <div class="main__two__container__left__body--description--block">
+                                <h3 class="description--block--title">
+                                    <i class="fa-solid fa-check description--block--icon"></i><span>Retine ready</span> 
+                                </h3>
+                                <p class="description--block--text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos!</p>
+                            </div>
+                            <div class="main__two__container__left__body--description--block">
+                                <h3 class="description--block--title">
+                                    <i class="fa-solid fa-check description--block--icon"></i><span>Fully responsive</span> 
+                                </h3>
+                                <p class="description--block--text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos!</p>
+                            </div>
+                            <div class="main__two__container__left__body--description--block">
+                                <h3 class="description--block--title">
+                                    <i class="fa-solid fa-check description--block--icon"></i><span>Ready to use</span> 
+                                </h3>
+                                <p class="description--block--text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos!</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="main__container__two__body--description--block">
-                        <h3 class="description--block--title">
-                            <i class="fa-solid fa-check description--block--icon"></i><span>Ready to use</span> 
-                        </h3>
-                        <p class="description--block--text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos!</p>
+                </div>
+                <div class="main__two__container__right">
+                    <div class="main__two__container__right--block">
+                        <div class="main__two__container__right--block--number">900</div>
+                        <div class="main__two__container__right--block--info">Creativity fuel</div>
+                    </div>
+                    <div class="main__two__container__right--block">
+                        <div class="main__two__container__right--block--number">900</div>
+                        <div class="main__two__container__right--block--info">Happy clients</div>
+                    </div>
+                    <div class="main__two__container__right--block">
+                        <div class="main__two__container__right--block--number">900</div>
+                        <div class="main__two__container__right--block--info">Projects done</div>
+                    </div>
+                    <div class="main__two__container__right--block">
+                        <div class="main__two__container__right--block--number">900</div>
+                        <div class="main__two__container__right--block--info">Hours spent</div>
                     </div>
                 </div>
             </div>
